Redo e2e process due to limitations on cypress action

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   admin:
-    name: Admin
+    name: All Tests
     runs-on: ubuntu-18.04
 
     services:
@@ -65,66 +65,69 @@ jobs:
       - name: Run tests
         uses: cypress-io/github-action@v1
         with:
-          start: yarn cypress:ci:admin
-          runTests: false
+          start: yarn server:start # real command is yarn cypress:ci:admin
+          wait-on: 'http://localhost:3000'
+          install: false
 
-  frontend:
-    name: Frontend
-    runs-on: ubuntu-18.04
+  # frontend:
+  #   name: Frontend
+  #   runs-on: ubuntu-18.04
 
-    services:
-      postgres:
-        image: postgres:11.5
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: gmmcalcombr_development
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+  #   services:
+  #     postgres:
+  #       image: postgres:11.5
+  #       env:
+  #         POSTGRES_USER: postgres
+  #         POSTGRES_PASSWORD: postgres
+  #         POSTGRES_DB: gmmcalcombr_development
+  #       ports:
+  #         - 5432:5432
+  #       options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
-    steps:
-      - uses: actions/checkout@v1
+  #   steps:
+  #     - uses: actions/checkout@v1
 
-      # languages
-      - name: Install Ruby 2.6.x
-        uses: actions/setup-ruby@v1
-        with:
-          ruby-version: 2.6.x
+  #     # languages
+  #     - name: Install Ruby 2.6.x
+  #       uses: actions/setup-ruby@v1
+  #       with:
+  #         ruby-version: 2.6.x
 
-      - name: Install Node.js 12.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
+  #     - name: Install Node.js 12.x
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: 12.x
 
-      - name: Install APT dependencies
-        run: sudo apt-get -yqq install libpq-dev
+  #     - name: Install APT dependencies
+  #       run: sudo apt-get -yqq install libpq-dev
 
-      # dependencies
-      - name: Install Bundler gem
-        run: gem install bundler
+  #     # dependencies
+  #     - name: Install Bundler gem
+  #       run: gem install bundler
 
-      - name: Run bundle install
-        run: |
-          bundle config path vendor/bundle
-          bundle config set without production
-          bundle install --jobs 4 --retry 3
+  #     - name: Run bundle install
+  #       run: |
+  #         bundle config path vendor/bundle
+  #         bundle config set without production
+  #         bundle install --jobs 4 --retry 3
 
-      - name: Run yarn install
-        run: yarn install
+  #     - name: Run yarn install
+  #       run: yarn install
 
-      - name: Setup database
-        run: bundle exec rails db:migrate
+  #     - name: Setup database
+  #       run: bundle exec rails db:migrate
 
-      - name: Compile assets
-        run: bundle exec rails assets:precompile
+  #     - name: Compile assets
+  #       run: bundle exec rails assets:precompile
 
-      - name: Load default DB data
-        run: bundle exec rails db:seed
+  #     - name: Load default DB data
+  #       run: bundle exec rails db:seed
 
-      # script
-      - name: Run tests
-        uses: cypress-io/github-action@v1
-        with:
-          start: yarn cypress:ci:frontend
-          runTests: false
+  #     # script
+  #     - name: Run tests
+  #       uses: cypress-io/github-action@v1
+  #       with:
+  #         start: yarn cypress:ci:frontend
+  #         runTests: false
+  #         wait-on: 'http://localhost:3000'
+  #         install: false
