--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -35,6 +35,16 @@ jobs:
       - name: Install APT dependencies
         run: sudo apt-get -yqq install libpq-dev
 
+      # caching
+      - name: Cache gems
+        uses: actions/cache@v1
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-bundler-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bundler-${{ env.cache-name }}-
+            ${{ runner.os }}-bundler-
+
       # dependencies
       - name: Install Bundler gem
         run: gem install bundler
@@ -67,6 +77,20 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
+
+      # caching
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - name: Cache node modules
+        uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-${{ env.cache-name }}-
+            ${{ runner.os }}-yarn-
 
       - name: Install yarn
         run: npm i -g yarn
