--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -1,8 +1,10 @@
 name: Unit Tests
 
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - master
+  pull_request:
 
 env:
   RAILS_ENV: test
