--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -137,9 +137,9 @@ jobs:
 
       - name: Upload coverage to CodeClimate
         run: |
-          ./cc-test-reporter format-coverage -t simplecov -o codeclimate.backend.json backend-coverage/.resultset.json
-          ./cc-test-reporter format-coverage -t lcov -o codeclimate.frontend.json frontend-coverage/lcov.info
+          ./cc-test-reporter format-coverage -t simplecov -o codeclimate.backend.json backend-coverage/.resultset.json --debug
+          ./cc-test-reporter format-coverage -t lcov -o codeclimate.frontend.json frontend-coverage/lcov.info --debug
           ./cc-test-reporter sum-coverage codeclimate.*.json -p 2
-          ./cc-test-reporter upload-coverage
+          ./cc-test-reporter upload-coverage --debug
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
