--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   admin:
-    name: All Tests
+    name: Admin
     runs-on: ubuntu-18.04
 
     services:
@@ -88,69 +88,93 @@ jobs:
       - name: Run tests
         uses: cypress-io/github-action@v1
         with:
-          start: yarn server:start # real command is yarn cypress:ci:admin
+          start: yarn server:start
           wait-on: 'http://localhost:3000'
           install: false
+          spec: spec/end-to-end/tests/admin/**.js # will only work when https://github.com/cypress-io/github-action/pull/51 is merged
 
-  # frontend:
-  #   name: Frontend
-  #   runs-on: ubuntu-18.04
+  frontend:
+    name: Frontend
+    runs-on: ubuntu-18.04
 
-  #   services:
-  #     postgres:
-  #       image: postgres:11.5
-  #       env:
-  #         POSTGRES_USER: postgres
-  #         POSTGRES_PASSWORD: postgres
-  #         POSTGRES_DB: gmmcalcombr_development
-  #       ports:
-  #         - 5432:5432
-  #       options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+    services:
+      postgres:
+        image: postgres:11.5
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: gmmcalcombr_development
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
-  #   steps:
-  #     - uses: actions/checkout@v1
+    steps:
+      - uses: actions/checkout@v1
 
-  #     # languages
-  #     - name: Install Ruby 2.6.x
-  #       uses: actions/setup-ruby@v1
-  #       with:
-  #         ruby-version: 2.6.x
+      # languages
+      - name: Install Ruby 2.6.x
+        uses: actions/setup-ruby@v1
+        with:
+          ruby-version: 2.6.x
 
-  #     - name: Install Node.js 12.x
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: 12.x
+      - name: Install Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
 
-  #     - name: Install APT dependencies
-  #       run: sudo apt-get -yqq install libpq-dev
+      - name: Install APT dependencies
+        run: sudo apt-get -yqq install libpq-dev
 
-  #     # dependencies
-  #     - name: Install Bundler gem
-  #       run: gem install bundler
+      # caching
+      - name: Cache gems
+        uses: actions/cache@v1
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-bundler-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bundler-${{ env.cache-name }}-
+            ${{ runner.os }}-bundler-
 
-  #     - name: Run bundle install
-  #       run: |
-  #         bundle config path vendor/bundle
-  #         bundle config set without production
-  #         bundle install --jobs 4 --retry 3
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
 
-  #     - name: Run yarn install
-  #       run: yarn install
+      - name: Cache node modules
+        uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-${{ env.cache-name }}-
+            ${{ runner.os }}-yarn-
 
-  #     - name: Setup database
-  #       run: bundle exec rails db:migrate
+      # dependencies
+      - name: Install Bundler gem
+        run: gem install bundler
 
-  #     - name: Compile assets
-  #       run: bundle exec rails assets:precompile
+      - name: Run bundle install
+        run: |
+          bundle config path vendor/bundle
+          bundle config set without production
+          bundle install --jobs 4 --retry 3
 
-  #     - name: Load default DB data
-  #       run: bundle exec rails db:seed
+      - name: Run yarn install
+        run: yarn install
 
-  #     # script
-  #     - name: Run tests
-  #       uses: cypress-io/github-action@v1
-  #       with:
-  #         start: yarn cypress:ci:frontend
-  #         runTests: false
-  #         wait-on: 'http://localhost:3000'
-  #         install: false
+      - name: Setup database
+        run: bundle exec rails db:migrate
+
+      - name: Compile assets
+        run: bundle exec rails assets:precompile
+
+      - name: Load default DB data
+        run: bundle exec rails db:seed
+
+      # script
+      - name: Run tests
+        uses: cypress-io/github-action@v1
+        with:
+          start: yarn server:start
+          wait-on: 'http://localhost:3000'
+          install: false
+          spec: spec/end-to-end/tests/frontend/**.js # will only work when https://github.com/cypress-io/github-action/pull/51 is merged
