--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -44,10 +44,10 @@ jobs:
         uses: actions/cache@v1
         with:
           path: vendor/bundle
-          key: ${{ runner.os }}-bundler-${{ hashFiles('**/Gemfile.lock') }}
+          key: bundler-e2e-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
-            ${{ runner.os }}-bundler-${{ env.cache-name }}-
-            ${{ runner.os }}-bundler-
+            bundler-e2e-${{ env.cache-name }}-
+            bundler-e2e-
 
       - name: Get yarn cache
         id: yarn-cache
@@ -57,10 +57,10 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: yarn-e2e-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-yarn-${{ env.cache-name }}-
-            ${{ runner.os }}-yarn-
+            yarn-e2e-${{ env.cache-name }}-
+            yarn-e2e-
 
       # dependencies
       - name: Install Bundler gem
@@ -69,7 +69,7 @@ jobs:
       - name: Run bundle install
         run: |
           bundle config path vendor/bundle
-          bundle config set without production
+          bundle config set without lint test production
           bundle install --jobs 4 --retry 3
 
       - name: Run yarn install
@@ -130,10 +130,10 @@ jobs:
         uses: actions/cache@v1
         with:
           path: vendor/bundle
-          key: ${{ runner.os }}-bundler-${{ hashFiles('**/Gemfile.lock') }}
+          key: bundler-e2e-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
-            ${{ runner.os }}-bundler-${{ env.cache-name }}-
-            ${{ runner.os }}-bundler-
+            bundler-e2e-${{ env.cache-name }}-
+            bundler-e2e-
 
       - name: Get yarn cache
         id: yarn-cache
@@ -143,10 +143,10 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: yarn-e2e-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-yarn-${{ env.cache-name }}-
-            ${{ runner.os }}-yarn-
+            yarn-e2e-${{ env.cache-name }}-
+            yarn-e2e-
 
       # dependencies
       - name: Install Bundler gem
@@ -155,7 +155,7 @@ jobs:
       - name: Run bundle install
         run: |
           bundle config path vendor/bundle
-          bundle config set without production
+          bundle config set without lint test production
           bundle install --jobs 4 --retry 3
 
       - name: Run yarn install
