--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -40,10 +40,10 @@ jobs:
         uses: actions/cache@v1
         with:
           path: vendor/bundle
-          key: ${{ runner.os }}-bundler-${{ hashFiles('**/Gemfile.lock') }}
+          key: bundler-unit-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
-            ${{ runner.os }}-bundler-${{ env.cache-name }}-
-            ${{ runner.os }}-bundler-
+            bundler-unit-${{ env.cache-name }}-
+            bundler-unit-
 
       # dependencies
       - name: Install Bundler gem
@@ -51,7 +51,7 @@ jobs:
       - name: Run bundle install
         run: |
           bundle config path vendor/bundle
-          bundle config set without production
+          bundle config set without lint development production
           bundle install --jobs 4 --retry 3
       - name: Setup database
         run: bundle exec rails db:migrate
@@ -87,10 +87,10 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: yarn-unit-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-yarn-${{ env.cache-name }}-
-            ${{ runner.os }}-yarn-
+            yarn-unit-${{ env.cache-name }}-
+            yarn-unit-
 
       - name: Install yarn
         run: npm i -g yarn
