--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -81,7 +81,7 @@ jobs:
       # caching
       - name: Get yarn cache
         id: yarn-cache
-        run: echo '::set-output name=dir::$(yarn cache dir)'
+        run: echo "::set-output name=dir::$(yarn cache dir)"
 
       - name: Cache node modules
         uses: actions/cache@v1
