Add more linting checks (some are placeholders) on github actions

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -40,9 +40,9 @@ checks:
 
 plugins:
   brakeman:
-    enabled: true
+    enabled: false
   bundler-audit:
-    enabled: true
+    enabled: false
   csslint:
     enabled: false
   duplication:
