--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -162,26 +162,75 @@ jobs:
       - name: Run bundler-audit
         run: bundler-audit
 
-  csslint:
-    name: 'Lint: CSSLint'
-    runs-on: ubuntu-18.04
-
-    steps:
-      - name: Run CSSLint
-        run: echo 'Running CSSLint'
-
   scsslint:
     name: 'Lint: SCSSLint'
     runs-on: ubuntu-18.04
 
     steps:
+      - uses: actions/checkout@v1
+
+      # languages
+      - name: Install Ruby 2.6.x
+        uses: actions/setup-ruby@v1
+        with:
+          ruby-version: 2.6.x
+
+      - name: Install APT dependencies
+        run: sudo apt-get -yqq install libpq-dev
+
+      # caching
+      - name: Cache gems
+        uses: actions/cache@v1
+        with:
+          path: vendor/bundle
+          key: bundler-lint-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            bundler-lint-${{ env.cache-name }}-
+            bundler-lint-
+
+      # dependencies
+      - name: Install Bundler gem
+        run: gem install bundler
+      - name: Run bundle install
+        run: |
+          bundle config path vendor/bundle
+          bundle config set without test development production
+          bundle install --jobs 4 --retry 3
+
       - name: Run SCSSLint
-        run: echo 'Running SCSSLint'
+        run: scss-lint
 
   eslint:
     name: 'Lint: ESLint'
     runs-on: ubuntu-18.04
 
     steps:
-      - name: Run ESLint
-        run: echo 'Running ESLint'
+      - uses: actions/checkout@v1
+
+      - name: Install Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+
+      # caching
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - name: Cache node modules
+        uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: yarn-unit-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            yarn-unit-${{ env.cache-name }}-
+            yarn-unit-
+
+      - name: Install yarn
+        run: npm i -g yarn
+
+      - name: Run yarn install
+        run: yarn install
+
+    - name: Run ESLint
+        run: yarn eslint
