--- a/app.json
+++ b/app.json
@@ -7,6 +7,9 @@
     "postdeploy": "bundle exec rake db:migrate db:seed db:seed:all"
   },
   "env": {
+    "BUNDLE_WITHOUT": {
+      "required": true
+    },
     "RAILS_MASTER_KEY": {
       "required": true
     },
