--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
         run: gem install dpl --version "~> 1.10"
 
       - name: Deploy
-        run: dpl --provider=heroku --app=gmmcal-dev --run="rails db:migrate" --run="rails db:seed:all" --run="rails db:cache:clear" --skip_cleanup --api-key=${{ secrets.HEROKU_API_KEY }}
+        run: dpl --provider=heroku --app=gmmcal-dev --run="rails db:migrate db:seed:all db:cache:clear" --skip_cleanup --api-key=${{ secrets.HEROKU_API_KEY }}
 
   production:
     name: 'Deploy: Production'
@@ -63,4 +63,4 @@ jobs:
         run: gem install dpl --version "~> 1.10"
 
       - name: Deploy
-        run: dpl --provider=heroku --app=gmmcal --run="rails db:migrate" --run="rails db:cache:clear" --skip_cleanup --api-key=${{ secrets.HEROKU_API_KEY }}
+        run: dpl --provider=heroku --app=gmmcal --run="rails db:migrate db:cache:clear" --skip_cleanup --api-key=${{ secrets.HEROKU_API_KEY }}
