--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -38,7 +38,7 @@ Metrics/BlockLength:
 Layout/LineLength:
   Exclude:
     - 'config/**/*'
-    - 'db/migrate/*'
+    - 'db/**/*'
     - 'spec/**/*'
 
 Metrics/MethodLength:
@@ -53,6 +53,11 @@ RSpec/NestedGroups:
 
 Rails/FilePath:
   Enabled: false
+
+Rails/Output:
+  Exclude:
+    - 'db/seeds.rb'
+    - 'lib/seed_manager.rb'
 
 Style/MixinUsage:
   Enabled: false
