--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         run: gem install dpl --no-document --version "~> 1.10"
 
       - name: Deploy
-        run: dpl --provider=heroku --app=gmmcal-dev --run="rails db:migrate" --run="db:seed:all" --run="db:cache:clear" --api-key=${{ secrets.HEROKU_API_KEY }}
+        run: dpl --provider=heroku --app=gmmcal-dev --api-key=${{ secrets.HEROKU_API_KEY }}
 
   production:
     name: 'Deploy: Production'
@@ -45,4 +45,4 @@ jobs:
         run: gem install dpl --no-document --version "~> 1.10"
 
       - name: Deploy
-        run: dpl --provider=heroku --app=gmmcal --run="rails db:migrate" --run="db:cache:clear" --api-key=${{ secrets.HEROKU_API_KEY }}
+        run: dpl --provider=heroku --app=gmmcal --api-key=${{ secrets.HEROKU_API_KEY }}
