--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -44,6 +44,7 @@ Layout/LineLength:
 Metrics/MethodLength:
   Exclude:
     - 'db/migrate/*'
+    - 'lib/seed_manager.rb'
 
 Rails/LexicallyScopedActionFilter:
   Enabled: false
