--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -52,7 +52,7 @@ jobs:
         run: |
           bundle config path vendor/bundle
           bundle config set without lint development production
-          bundle install --jobs 4 --retry 3
+          bundle install --jobs 4 --retry 3 --deployment
       - name: Setup database
         run: bundle exec rails db:migrate
 
