--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -6,6 +6,8 @@ on:
 
 env:
   RAILS_ENV: test
+  RUBY_VERSION: 2.7.x
+  NODE_VERSION: 12.x
 
 jobs:
   backend:
@@ -27,10 +29,10 @@ jobs:
       - uses: actions/checkout@v1
 
       # languages
-      - name: Install Ruby 2.6.x
+      - name: Install Ruby ${{ env.RUBY_VERSION }}
         uses: actions/setup-ruby@v1
         with:
-          ruby-version: 2.6.x
+          ruby-version: ${{ env.RUBY_VERSION }}
 
       - name: Install APT dependencies
         run: sudo apt-get -yqq install libpq-dev
@@ -73,10 +75,10 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Install Node.js 12.x
+      - name: Install Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
+          node-version: ${{ env.NODE_VERSION }}
 
       # caching
       - name: Get yarn cache
