Add quotes on ruby/node versions

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,8 +4,8 @@ on:
   - pull_request
 
 env:
-  RUBY_VERSION: 2.7.x
-  NODE_VERSION: 12.x
+  RUBY_VERSION: '2.7.x'
+  NODE_VERSION: '12.x'
 
 jobs:
   rubocop:
