--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -5,8 +5,8 @@ on:
 
 env:
   RAILS_ENV: development
-  RUBY_VERSION: 2.7.x
-  NODE_VERSION: 12.x
+  RUBY_VERSION: '2.7.x'
+  NODE_VERSION: '12.x'
 
 jobs:
   admin:
