--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -28,10 +28,14 @@ jobs:
       - uses: actions/checkout@v1
 
       # languages
+      - name: Set up RVM
+        run: curl -sSL https://get.rvm.io | bash
+
       - name: Install Ruby ${{ env.RUBY_VERSION }}
-        uses: actions/setup-ruby@v1
-        with:
-          ruby-version: ${{ env.RUBY_VERSION }}
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          rvm install ${{ env.RUBY_VERSION }} --binary
+          rvm --default use ${{ env.RUBY_VERSION }}
 
       - name: Install Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v1
@@ -114,10 +118,14 @@ jobs:
       - uses: actions/checkout@v1
 
       # languages
+      - name: Set up RVM
+        run: curl -sSL https://get.rvm.io | bash
+
       - name: Install Ruby ${{ env.RUBY_VERSION }}
-        uses: actions/setup-ruby@v1
-        with:
-          ruby-version: ${{ env.RUBY_VERSION }}
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          rvm install ${{ env.RUBY_VERSION }} --binary
+          rvm --default use ${{ env.RUBY_VERSION }}
 
       - name: Install Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v1
