--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,14 @@ jobs:
       - uses: actions/checkout@v1
 
       # languages
+      - name: Set up RVM
+        run: curl -sSL https://get.rvm.io | bash
+
       - name: Install Ruby ${{ env.RUBY_VERSION }}
-        uses: actions/setup-ruby@v1
-        with:
-          ruby-version: ${{ env.RUBY_VERSION }}
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          rvm install ${{ env.RUBY_VERSION }} --binary
+          rvm --default use ${{ env.RUBY_VERSION }}
 
       - name: Install dpl gem
         run: gem install dpl --no-document --version "~> 1.10"
@@ -42,10 +46,14 @@ jobs:
       - uses: actions/checkout@v1
 
       # languages
+      - name: Set up RVM
+        run: curl -sSL https://get.rvm.io | bash
+
       - name: Install Ruby ${{ env.RUBY_VERSION }}
-        uses: actions/setup-ruby@v1
-        with:
-          ruby-version: ${{ env.RUBY_VERSION }}
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          rvm install ${{ env.RUBY_VERSION }} --binary
+          rvm --default use ${{ env.RUBY_VERSION }}
 
       - name: Install dpl gem
         run: gem install dpl --no-document --version "~> 1.10"
