--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -70,10 +70,13 @@ jobs:
 
       # dependencies
       - name: Install Bundler gem
-        run: gem install bundler
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          gem install bundler
 
       - name: Run bundle install
         run: |
+          source $HOME/.rvm/scripts/rvm
           bundle config path vendor/bundle
           bundle config set without lint test production
           bundle install --jobs 4 --retry 3 --deployment
@@ -82,13 +85,19 @@ jobs:
         run: yarn install
 
       - name: Setup database
-        run: bundle exec rails db:migrate
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          bundle exec rails db:migrate
 
       - name: Compile assets
-        run: bundle exec rails assets:precompile
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          bundle exec rails assets:precompile
 
       - name: Load default DB data
-        run: bundle exec rails db:seed
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          bundle exec rails db:seed
 
       # script
       - name: Run tests
@@ -160,10 +169,13 @@ jobs:
 
       # dependencies
       - name: Install Bundler gem
-        run: gem install bundler
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          gem install bundler
 
       - name: Run bundle install
         run: |
+          source $HOME/.rvm/scripts/rvm
           bundle config path vendor/bundle
           bundle config set without lint test production
           bundle install --jobs 4 --retry 3 --deployment
@@ -172,13 +184,19 @@ jobs:
         run: yarn install
 
       - name: Setup database
-        run: bundle exec rails db:migrate
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          bundle exec rails db:migrate
 
       - name: Compile assets
-        run: bundle exec rails assets:precompile
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          bundle exec rails assets:precompile
 
       - name: Load default DB data
-        run: bundle exec rails db:seed
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          bundle exec rails db:seed
 
       # script
       - name: Run tests
