--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -40,9 +40,13 @@ jobs:
 
       # dependencies
       - name: Install Bundler gem
-        run: gem install bundler
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          gem install bundler
+
       - name: Run bundle install
         run: |
+          source $HOME/.rvm/scripts/rvm
           bundle config path vendor/bundle
           bundle config set without test development production
           bundle install --jobs 4 --retry 3 --deployment
@@ -82,9 +86,13 @@ jobs:
 
       # dependencies
       - name: Install Bundler gem
-        run: gem install bundler
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          gem install bundler
+
       - name: Run bundle install
         run: |
+          source $HOME/.rvm/scripts/rvm
           bundle config path vendor/bundle
           bundle config set without test development production
           bundle install --jobs 4 --retry 3 --deployment
@@ -124,9 +132,13 @@ jobs:
 
       # dependencies
       - name: Install Bundler gem
-        run: gem install bundler
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          gem install bundler
+
       - name: Run bundle install
         run: |
+          source $HOME/.rvm/scripts/rvm
           bundle config path vendor/bundle
           bundle config set without test development production
           bundle install --jobs 4 --retry 3 --deployment
@@ -150,6 +162,7 @@ jobs:
           source $HOME/.rvm/scripts/rvm
           rvm install ${{ env.RUBY_VERSION }} --binary
           rvm --default use ${{ env.RUBY_VERSION }}
+
       - name: Install APT dependencies
         run: sudo apt-get -yqq install libpq-dev
 
@@ -165,21 +178,31 @@ jobs:
 
       # dependencies
       - name: Install Bundler gem
-        run: gem install bundler
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          gem install bundler
+
       - name: Run bundle install
         run: |
+          source $HOME/.rvm/scripts/rvm
           bundle config path vendor/bundle
           bundle config set without test development production
           bundle install --jobs 4 --retry 3 --deployment
 
       - name: Install Bundler Audit
-        run: gem install bundler-audit
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          gem install bundler-audit
 
       - name: Update advisory database
-        run: bundler-audit update
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          bundler-audit update
 
       - name: Run bundler-audit
-        run: bundler-audit
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          bundler-audit
 
   scsslint:
     name: 'Lint: SCSSLint'
@@ -189,10 +212,14 @@ jobs:
       - uses: actions/checkout@v1
 
       # languages
+      - name: Set up RVM
+        run: curl -sSL https://get.rvm.io | bash
+
       - name: Install Ruby ${{ env.RUBY_VERSION }}
-        uses: actions/setup-ruby@v1
-        with:
-          ruby-version: ${{ env.RUBY_VERSION }}
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          rvm install ${{ env.RUBY_VERSION }} --binary
+          rvm --default use ${{ env.RUBY_VERSION }}
 
       - name: Install APT dependencies
         run: sudo apt-get -yqq install libpq-dev
@@ -209,15 +236,21 @@ jobs:
 
       # dependencies
       - name: Install Bundler gem
-        run: gem install bundler
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          gem install bundler
+
       - name: Run bundle install
         run: |
+          source $HOME/.rvm/scripts/rvm
           bundle config path vendor/bundle
           bundle config set without test development production
           bundle install --jobs 4 --retry 3 --deployment
 
       - name: Run SCSSLint
-        run: bundle exec scss-lint
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          bundle exec scss-lint
 
   eslint:
     name: 'Lint: ESLint'
