--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -52,18 +52,27 @@ jobs:
 
       # dependencies
       - name: Install Bundler gem
-        run: gem install bundler
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          gem install bundler
+
       - name: Run bundle install
         run: |
+          source $HOME/.rvm/scripts/rvm
           bundle config path vendor/bundle
           bundle config set without lint development production
           bundle install --jobs 4 --retry 3 --deployment
-      - name: Setup database
-        run: bundle exec rails db:migrate
+
+          - name: Setup database
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          bundle exec rails db:migrate
 
       # script
       - name: Run tests
-        run: bundle exec rspec
+        run: |
+          source $HOME/.rvm/scripts/rvm
+          bundle exec rspec
 
       - name: Upload backend coverage result
         uses: actions/upload-artifact@v1
