--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -28,7 +28,7 @@ jobs:
 
       # languages
       - name: Install APT dependencies
-        run: apt-get -yqq install libpq-dev
+        run: apt-get -yqq install nodejs yarn libpq-dev
 
       # caching
       - name: Cache gems
