Add node sources to APT

--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -28,7 +28,11 @@ jobs:
 
       # languages
       - name: Install APT dependencies
-        run: apt-get -yqq install nodejs yarn libpq-dev
+        run: |
+          curl -sL https://deb.nodesource.com/setup_12.x | bash -
+          curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+          echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+          apt-get -yqq install nodejs yarn libpq-dev
 
       # caching
       - name: Cache gems
