--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -7,6 +7,7 @@ on:
 env:
   RAILS_ENV: test
   NODE_VERSION: '12.x'
+  DATABASE_URL: postgres://postgres:@postgres:5432/test
 
 jobs:
   backend:
@@ -73,7 +74,6 @@ jobs:
 
     container:
       image: ruby:2.7.0
-      options: --network-alias mainservice
 
   frontend:
     name: 'Unit: Frontend'
