--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@
 # Configure Using Gemfile
 # gem 'pg'
 #
-default: &default
+development:
   adapter: postgresql
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
@@ -23,9 +23,6 @@ default: &default
   host: <%= ENV.fetch("DATABASE_HOST") { 'localhost' } %>
   username: <%= ENV.fetch("DATABASE_USERNAME") { 'postgres' } %>
   password: <%= ENV.fetch("DATABASE_PASSWORD") { 'postgres' } %>
-
-development:
-  <<: *default
   database: gmmcalcombr_development
 
   # The specified database role being used to connect to postgres.
@@ -59,7 +56,8 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
   database: gmmcalcombr_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
